--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 # Application Name
-spring.application.name=bus-booking-system
-
-# ✅ Use Railway's injected environment variables
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.application.name=bus-booking-system# ✅ Database Configuration for Railway
+spring.datasource.url=jdbc:mysql://gondola.proxy.rlwy.net:47576/railway
+spring.datasource.username=root
+spring.datasource.password=ViIbijgfqULwwVfMbWQpMZJSteByfNhH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
