--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-# Application Name
-spring.application.name=bus-booking-system# ✅ Database Configuration for Railway
-spring.datasource.url=jdbc:mysql://gondola.proxy.rlwy.net:47576/railway
-spring.datasource.username=root
-spring.datasource.password=ViIbijgfqULwwVfMbWQpMZJSteByfNhH
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDB}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
