--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,52 @@
-# Java
+# ====================================
+# Java / Spring Boot
+# ====================================
 *.class
 *.jar
 *.war
 *.ear
-*.logs
+*.log
 *.iml
+
+# Build directories
 .gradle/
-build/
 target/
+build/
 out/
 
-# React
+# Maven wrapper
+.mvn/
+mvnw
+mvnw.cmd
+
+# Application config
+*.properties~
+*.yml~
+application-dev.yml
+application-prod.yml
+.env
+
+# ====================================
+# Node / React
+# ====================================
 node_modules/
-/build
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ====================================
+# IDE and OS
+# ====================================
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# OS
 .DS_Store
-Thumbs.db 
+Thumbs.db
