Set server port to 8080 for Railway deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Seat Configuration
 bus.seats.elder.percentage=15
 bus.seats.pregnant.percentage=15
+server.port=8080
