--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDB}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+# =============================
+# Database Configuration
+# =============================
+
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:mysql.railway.internal}:${MYSQLPORT:3306}/${MYSQLDB:bus_booking_db}
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# =============================
+# JPA / Hibernate Configuration
+# =============================
 
-# JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 
 # Logging Configuration
 logging.level.org.springframework=INFO
